data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_818.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\91\80\80\80\00\01\07\6d\6f\64\75\6c\65"
    "\41\05\66\75\6e\63\41\00\00\03\82\80\80\80\00\01"
    "\00\0a\8a\80\80\80\00\01\84\80\80\80\00\00\10\00"
    "\0b"
  )
""
)